# clickhouse-repos-manager

./: .gitignore  .pylintrc  .ycm_extra_conf.py  LICENSE.txt  README.md  pyproject.toml
clickhouse-repos-manager/: app.py  app_config.py  args_helper.py  context_helper.py  packages.py  release.py  repos.py
clickhouse-repos-manager/_vendor/: ci_config.py  download_helper.py  get_robot_token.py  github_helper.py  packages.py  shell_runner.py
configs/reprepro/: distributions
