[tool.poetry]
name = "clickhouse-repos-manager"
version = "0.1.0"
description = ""
authors = ["ClickHouse INC. <packages@clickhouse.com>"]
license = "APACHE-2.0"
readme = "README.md"
packages = [{include = "clickhouse_repos_manager"}]


[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
PyGithub = "^1.55"
boto3 = "^1.24.85"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
